couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-service
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: couchdb
  ports:
    - protocol: TCP
      port: 5984
      targetPort: 5984
      nodePort: 30084
  selector:
    app: obsidian-server
